--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,23 +1,40 @@
-.testimony
-    .testimony-item
-        display: flex
-        align-items: center
-        justify-content: center
+@keyframes toggle 
+    0%
+        margin-top: -40px
+    10%
+        margin-top: 0px
+    90%
+        margin-top: 0px
+    100%
+        margin-top: -40px
 
-        .content
-            max-width: 400px
+.container
+    width: 100%
+    padding: 0
+    margin: 0
+
+    .navbar
+        width: 100%
+        background-color: #d1d1d1
+
+        p
             display: inline-block
-            text-align: center
-            padding: 0 4rem
+            padding: 0.25rem 1rem
 
-            img
-                width: 120px
-                border-radius: 50%
+        button
+            float: right
+            padding: 0.25rem 1rem
+            
+    .notification
+        position: relative
+        z-index: -1
+        background-color: orange
+        height: 40px
+        line-height: 40px
+        padding: 0 0.25rem
+        text-align: center
+        margin-top: -20px
+        animation-name: toggle
+        animation-duration: 4s
+        animation-iteration-count: 1
 
-            p.name
-                font-weight: bold
-                margin-bottom: 0
-                font-size: 1.5rem
-
-            p.university
-                margin: 0
